--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+@import "compass/css3";
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -87,5 +89,26 @@ body {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
+  }
+}
+
+
+/* Article styles */
+
+article {
+  margin: 10px;
+  padding: 10px;
+  @include box-shadow(rgba(0,0,0,0.33) 2px 2px 10px);
+}
+
+article {
+  p.body {
+    padding: 5px;
+    color: lighten(rgb(0,0,0), 50%)
+  }
+
+  footer {
+    color: lighten(rgb(0,0,0), 80%);
+    font-size: 0.8em;
   }
 }
