--- a/app/views/new.html
+++ b/app/views/new.html
@@ -1,12 +1,22 @@
-<form ng-submit="vm.submit()">
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" placeholder="Title" ng-model="vm.article.title">
-  </div>
+<div class="row">
+  <div class="col-lg-6 col-md-12">
+    <h4>Editor:</h4>
+    <form ng-submit="vm.submit()">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="vm.article.title">
+      </div>
 
-  <div class="form-group">
-    <textarea class="form-control" rows="10" id="body" ng-model="vm.article.body" placeholder="Write your interesting thoughts..."></textarea>
-  </div>
+      <div class="form-group">
+        <textarea class="form-control" rows="10" id="body" ng-model="vm.article.body" placeholder="Write your interesting thoughts..."></textarea>
+      </div>
 
-  <button type="submit" class="btn btn-default">Create</button>
-</form>
+      <button type="submit" class="btn btn-default">Create</button>
+    </form>
+  </div>
+  <div class="col-lg-6 col-md-12">
+    <h4>Preview:</h4>
+    <mjs-article article="vm.article"></mjs-article>
+  </div>
+</div>
+
